# hackernews-mcp

./: Cargo.toml  README.md
src/: client.rs  main.rs  tools.rs  types.rs
