[package]
name = "hackernews-mcp"
version = "0.1.0"
edition = "2021"
description = "A stdio Model Context Protocol (MCP) server exposing read-only Hacker News tools — browse story feeds, read capped comment trees, look up users, and full-text search via the official Firebase and Algolia APIs. For use with Claude Desktop and Claude Code."
license = "MIT"
repository = "https://github.com/devrelopers/hackernews-mcp"
readme = "README.md"
authors = ["DevRelopers <hello@devrelopers.io>", "David Liedle <david.liedle@gmail.com>"]
keywords = ["mcp", "hackernews", "hacker-news", "api-bindings", "cli"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "hackernews-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
